Added check to see that get_magic_quotes_gpc() function exists
before calling it. This fix problems for people running newer
(unsupported) versions of PHP.

Fixed bug where phpVirtualBox would try to pre-load images that do
not exist - causing 404 errors in web server logs.
http://code.google.com/p/phpvirtualbox/issues/detail?id=396

Added host memory usage information when the VirtualBox host is
selected in the VM list.
http://code.google.com/p/phpvirtualbox/issues/detail?id=402

-------------------------------------
	4.1-2	2011-8-21
-------------------------------------
Added Stop options to VM list context menu.

Fixed bug in Global Preferences that would not allow you to save
settings if a Language was not selected in the Languages section.
http://code.google.com/p/phpvirtualbox/issues/detail?id=348

Added context menus to VM Storage settings.

Fixed bug that would cause network adapters to disconnect and
reconnect when saving settings of a running VM.
http://code.google.com/p/phpvirtualbox/issues/detail?id=361

Changing a VM name in the Appliance Import Wizard now
automatically updates virtual disk image paths.
http://code.google.com/p/phpvirtualbox/issues/detail?id=362

Minor translation fixes.

Added Linked Clone support to match VirtualBox 4.1.2.

Fixed bug when the bridged adapter of a VM was assigned to a host
sub-interface. This would not allow for selection of the interface
in VM settings.
http://code.google.com/p/phpvirtualbox/issues/detail?id=371

Fixed bug in VM log viewer that would not display log file
contents when non-utf-8 characers are present.

-------------------------------------
	4.1-1b	2011-8-1
-------------------------------------
Added snapshot thumbnail and full image link when viewing snapshot
details of an online snapshot.

Added context menus for snapshots.

Minor UI changes.

Fixed page fusion setting bug for people running VirtualBox in a
32-bit OS with a 64-bit processor.
http://code.google.com/p/phpvirtualbox/issues/detail?id=347